sorted out initial routing with login screen

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,12 +12,13 @@ code {
     monospace;
 }
 
-.mainContainer {
-    position: fixed;
+.userSelectContainer {
+    position: absolute;
     background-color: #82375e;
     top: 0;
     width: 100vw;
     height: 100vh;
+    z-index: 1000;
 }
 
 .whosTravelling {
