leaflet map working

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -76,6 +76,17 @@ code {
 
 }
 
+.map-container {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+.leaflet-container {
+  height: 300px;
+  width: 400px;
+}
+
 .addUserFormItem {}
 
 
