added images and all plan details pulling through

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -143,12 +143,6 @@ code {
 
 .sticky-heading {
   position: sticky;
-  top: 0.83em;
-  z-index: 1000;
-}
-
-.sticky-subheading {
-  position: sticky;
-  top: 3.16em;
+  top: 0;
   z-index: 1000;
 }
