--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,11 +14,23 @@ code {
 
 .userSelectContainer {
     position: absolute;
-    background-color: #82375e;
+    background-image: url("https://onlyvectorbackgrounds.com/wp-content/uploads/2019/03/Subtle-Lines-Abstract-Gradient-Background-Green.jpg");
+    background-size: cover;
+    background-repeat: none;
     top: 0;
     width: 100vw;
     height: 100vh;
     z-index: 1000;
+}
+
+.userSelectImage {
+    position: fixed;
+    height: 30vh;
+    width: 30vh;
+    border-radius: 20vh;
+    border: 5px solid white;
+    top: 30vh;
+    left: 60vw;
 }
 
 .whosTravelling {
@@ -28,6 +40,8 @@ code {
     font-size: 7rem;
     left: 15%;
     top: 20%;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+
 }
 
 .selectTraveller {
@@ -42,9 +56,10 @@ code {
 .searchAndAdd {
     display: flex;
     position: fixed;
-    top: 50%;
-    left: 25%;
+    top: 40vh;
+    left: 20vw;
 }
+
 
 .goButton {
     position: fixed;
@@ -52,8 +67,23 @@ code {
     padding: 2vh;
     border-radius: 30px;
     background-color: white;
-    top: 70%;
-    left: 75%;
+    top: 65%;
+    left: 66%;
+    border: 1px solid grey;
+}
+
+.addUser{
+    margin-right: 1vw;
+    width: 10vh;
+    border: 1px solid grey;
+    background-color: white;
+    border-radius: 2vw;
+    color: #8EAA7B;
+    font-size: 3em;
+}
+
+.addUser:hover {
+    background-color: #f7f7f7;
 }
 
 
@@ -61,13 +91,13 @@ code {
     position: absolute;
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+    align-items: center;
     justify-content: space-between;
-    border: 1px solid black;
+    border: 5px solid #8EAA7B;
     border-radius: 20px;
     background-color: white;
-    width: 30%;
-    height: 50%;
+    width: 30vw;
+    height: 60%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -76,241 +106,312 @@ code {
 
 }
 
+.nameLabel{
+    margin-right: 0.5vw;
+    padding: 0;
+    font-size: 1.2em;
+}
+
+.addUserBackground {
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 8;
+}
+
+.enterName {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.selectableImage {
+    height: 10vh;
+    width: 10vh;
+    margin: 0.5vw;
+    border: 1px solid black;
+}
+
+
+.selectableImages{
+    display: flex;
+}
+
 .map-container {
-  display: flex;
-  justify-content: center;
-  padding: 10px;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
 }
 
 .leaflet-container {
-  height: 300px;
-  width: 400px;
+    height: 300px;
+    width: 400px;
 }
 
 .container {
-  margin: 0 0 0 70px;
+    margin: 0 0 0 70px;
 }
 
 .homeWelcome {
-  display: flex;
-  font-size: 2rem;
-  text-align: center;
-  justify-content: center;
-  background-image: url("https://mir-s3-cdn-cf.behance.net/project_modules/1400/91dc1964120315.5ac77335ae374.png");
-  height: 30vh;
+    display: flex;
+    font-size: 2rem;
+    text-align: center;
+    justify-content: center;
+    border-bottom: 5px solid #8EAA7B ;
+    background-image: url("https://www.crawshaygallery.com/portfolio2019/PinkSky.jpg");
+    height: 30vh;
+}
+
+.homeIcon {
+    margin: 2vh;
+}
+
+.homePanels {
+    display: flex;
+    justify-content: space-between;
+    text-align: left;
+    margin: 1vh 4vh;
+}
+
+.homePanel {
+    background-color: #8EAA7B;
+    font-size: 1.5em;
+    padding: 2vh;
+    color: white;
+    width: 47.5%;
+    margin-top: 2vh;
+    text-align: center;
+}
+
+.homePara {
+    font-size: 1.5em;
+    margin: 5vh 4vh;
+    border: 2px solid #8EAA7B;
+    display: flex;
+}
+
+.homeParaPanel {
+    margin-top: 2vh;
+    margin: 5vh;
+}
+
+.boldNumber{
+    text-decoration: underline;
+    font-weight: bolder;
 }
 
 .homeWelcome h2{
-  color: white;
-  display: flex;
-  align-items: center;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    color: white;
+    display: flex;
+    align-items: center;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 
 .sidenav {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  width: 70px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #8EAA7B;
-  overflow-x: hidden;
-  padding-top: 20px;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 70px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #8EAA7B;
+    overflow-x: hidden;
+    padding-top: 20px;
+    align-items: center;
 }
 
 .sidenav ul {
-  text-align: center;
-  display: inline-block;
-  text-align: center;
-  list-style-type: none;
-  padding: 0;
+    text-align: center;
+    display: inline-block;
+    text-align: center;
+    list-style-type: none;
+    padding: 0;
 }
 
 a.nav-icon {
-  padding: 6px 8px 6px 8px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #E4E4E4;
-  display: flex;
-  justify-content: center;
+    padding: 6px 8px 6px 8px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #E4E4E4;
+    display: flex;
+    justify-content: center;
 }
 
 a.nav-icon, a.nav-icon:visited {
-  color: ghostwhite;
-  text-decoration: none;
+    color: ghostwhite;
+    text-decoration: none;
 }
 
 a.nav-icon:hover, a.nav-icon:active, a.nav-icon:focus{
-  color: #343E2D;
-  text-decoration: none;
-  text-shadow: 0 0 5px ghostwhite;
+    color: #343E2D;
+    text-decoration: none;
+    text-shadow: 0 0 5px ghostwhite;
 }
 
 
 .custom-timeline {
-  margin-left: 20px;
+    margin-left: 20px;
 }
 
 .custom-timeline .rs-timeline-item-custom-dot .rs-icon {
-  position: absolute;
-  background: #fff;
-  top: 0;
-  left: -2px;
-  border: 2px solid #ddd;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  font-size: 18px;
-  padding-top: 9px;
-  color: #999;
-  margin-left: -13px;
+    position: absolute;
+    background: #fff;
+    top: 0;
+    left: -2px;
+    border: 2px solid #ddd;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    font-size: 18px;
+    padding-top: 9px;
+    color: #999;
+    margin-left: -13px;
 }
 
 .custom-timeline .rs-timeline-item-content {
-  margin-left: 24px;
+    margin-left: 24px;
 }
 
 ul.no-bullet {
-  list-style-type: none;
-  padding-inline-start: 0px;
+    list-style-type: none;
+    padding-inline-start: 0px;
 }
 
 li.nav-item{
-  padding: 0px;
+    padding: 0px;
 }
 
 li.holiday-list-item {
-  padding: 0px;
+    padding: 0px;
 }
 
 .nav-buttons-green, .nav-buttons-white:hover{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 130px;
-  height: 30px;
-  border: solid 2px white;
-  border-radius: 15px;
-  margin: 5px;
-  color: white;
-  background-color: #8EAA7B;
-  width: 130px;
-  height: 30px;
-  font-weight: bold;
-  text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 130px;
+    height: 30px;
+    border: solid 2px white;
+    border-radius: 15px;
+    margin: 5px;
+    color: white;
+    background-color: #8EAA7B;
+    width: 130px;
+    height: 30px;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 .nav-buttons-white, .nav-buttons-green:hover{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 130px;
-  height: 30px;
-  border: solid 2px #8EAA7B;
-  border-radius: 15px;
-  margin: 5px;
-  color: #8EAA7B;
-  background-color: white;
-  width: 130px;
-  height: 30px;
-  font-weight: bold;
-  text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 130px;
+    height: 30px;
+    border: solid 2px #8EAA7B;
+    border-radius: 15px;
+    margin: 5px;
+    color: #8EAA7B;
+    background-color: white;
+    width: 130px;
+    height: 30px;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 a.main-green {
-  color: white;
-  font-weight: bold;
-  text-decoration: none;
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 a.main-green:hover {
-  color: #8EAA7B;
-  font-weight: bold;
-  text-decoration: none;
+    color: #8EAA7B;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 
 button.main-white, button.main-green:hover {
-  border: solid 2px #8EAA7B;
-  border-radius: 15px;
-  margin: 5px;
-  color: #8EAA7B;
-  background-color: white;
-  width: 130px;
-  height: 30px;
-  font-weight: bold;
+    border: solid 2px #8EAA7B;
+    border-radius: 15px;
+    margin: 5px;
+    color: #8EAA7B;
+    background-color: white;
+    width: 130px;
+    height: 30px;
+    font-weight: bold;
 }
 
 button.main-green, button.main-white:hover {
-  border: solid 2px white;
-  border-radius: 15px;
-  margin: 5px;
-  color: white;
-  background-color: #8EAA7B;
-  width: 130px;
-  height: 30px;
-  font-weight: bold;
+    border: solid 2px white;
+    border-radius: 15px;
+    margin: 5px;
+    color: white;
+    background-color: #8EAA7B;
+    width: 130px;
+    height: 30px;
+    font-weight: bold;
 }
 
 button.sml-white, button.sml-green:hover {
-  border: solid 2px #8EAA7B;
-  border-radius: 15px;
-  margin: 5px;
-  color: #8EAA7B;
-  background-color: white;
-  width: 100px;
-  height: 25px;
-  font-weight: bold;
-  font-size: 12px;
+    border: solid 2px #8EAA7B;
+    border-radius: 15px;
+    margin: 5px;
+    color: #8EAA7B;
+    background-color: white;
+    width: 100px;
+    height: 25px;
+    font-weight: bold;
+    font-size: 12px;
 }
 
 button.sml-green, button.sml-white:hover {
-  border: solid 2px white;
-  border-radius: 15px;
-  margin: 5px;
-  color: white;
-  background-color: #8EAA7B;
-  width: 100px;
-  height: 25px;
-  font-weight: bold;
-  font-size: 12px;
+    border: solid 2px white;
+    border-radius: 15px;
+    margin: 5px;
+    color: white;
+    background-color: #8EAA7B;
+    width: 100px;
+    height: 25px;
+    font-weight: bold;
+    font-size: 12px;
 }
 
 .sticky-heading {
-  background-color: white;
-  box-shadow: 0 1px 5px 0 lightgrey;
-  padding: 10px;
-  position: sticky;
-  top: 0;
-  z-index: 2000;
+    background-color: white;
+    box-shadow: 0 1px 5px 0 lightgrey;
+    padding: 10px;
+    position: sticky;
+    top: 0;
+    z-index: 2000;
 }
 
 .holiday {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  border: 1px solid grey;
-  padding: 5px;
-  margin: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    border: 1px solid grey;
+    padding: 5px;
+    margin: 0px;
 }
 
 a.holiday-link, a.holiday-link:hover {
-  color: grey;
-  text-decoration: none;
-  font-size: 26px;
+    color: grey;
+    text-decoration: none;
+    font-size: 26px;
 }
 
 h2.holiday-title {
-  font-size: 20px;
+    font-size: 20px;
 }
 
 h3.holiday-locations {
-  font-size: 15px;
-  text-align: left;
+    font-size: 15px;
+    text-align: left;
 }
