--- a/client/src/index.css
+++ b/client/src/index.css
@@ -454,12 +454,15 @@ h3.holiday-locations {
 }
 
 div.secondary-nav-bar {
-    padding: 20px;
-    position: fixed;
-    left: 70px;
-    height: 100vh;
-    background-color: #EFEEF0;
-    width: 250px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  padding: 20px;
+  position: fixed;
+  left: 70px;
+  height: 100vh;
+  background-color: #EFEEF0;
+  width: 250px;
 }
 
 div.nav-bar-heading {
