--- a/client/src/index.css
+++ b/client/src/index.css
@@ -127,8 +127,8 @@ code {
 }
 
 .selectableImage {
-    height: 10vh;
-    width: 10vh;
+    height: 5vw;
+    width: 5vw;
     margin: 0.5vw;
     border: 1px solid black;
 }
@@ -206,6 +206,77 @@ code {
     display: flex;
     align-items: center;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+.profileTitle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    height: 15vh;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    background-image: url("https://d1xw84ija6gjgy.cloudfront.net/production/dc6a70712a252123c40d2adba6a11d84/conversions/HD.jpg");
+    background-repeat: none;
+    background-size: cover;
+    border-bottom: 5px solid #8EAA7B;
+
+}
+
+.profileInfo{
+    border: 5px solid #8EAA7B;
+    margin: 10vh;
+    height: 80vh;
+}
+
+.profileSection {
+    height: 43vh;
+    width: 47.5%;
+}
+
+.profileSections {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5vh;
+    margin: 0vh;
+}
+
+.editProfile{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #8EAA7B;
+    color: white;
+    height: 6vh;
+    width: 50%;
+    border-radius: 5vh;
+}
+
+.editButton{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.editProfile:hover{
+    background-color:
+}
+.sectionLabel {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #8EAA7B;
+    color: white;
+    height: 8vh;
+    margin-bottom: 2vh;
+}
+
+.profileImage {
+    height: 30vh;
+    width: 30vh;
+    margin: 2vh;
+    border: 1px solid black;
 }
 
 
