--- a/client/src/index.css
+++ b/client/src/index.css
@@ -505,7 +505,7 @@ button.sml-green, button.sml-white:hover {
     justify-content: space-between;
     width: 100%;
     border-bottom: 1px solid grey;
-    padding: 5px;
+    padding: 5px 20px;
     margin: 0px;
 }
 
@@ -534,6 +534,8 @@ div.secondary-nav-bar {
   height: 100vh;
   background-color: #EFEEF0;
   width: 250px;
+  text-align: left;
+  box-shadow: 0 0 5px 0 lightgrey;
 }
 
 div.nav-bar-heading {
@@ -551,4 +553,42 @@ h3.nav-bar-title {
 div.extended-container {
   display: flex;
   flex-direction: row;
+}
+
+.nav-bar-links {
+  display: flex;
+  flex-direction: column;
+}
+
+a.nav-bar-link, a.nav-bar-link:active, a.nav-bar-link:visited, a.nav-bar-link:focus {
+  color: grey;
+  font-size: 17px;
+  padding: 0 0 2px 0;
+  text-decoration: none;
+}
+
+a.nav-bar-link:hover {
+  color: lightgrey;
+  text-decoration: none;
+}
+
+hr.nav-horizontal-line {
+  border: 1px solid darkgrey;
+  width: 100%;
+}
+
+div.container-header {
+  height: 50px;
+  background-color: #8EAA7B;
+  padding: 2px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+h1.container-title {
+  font-size: 25px;
+  margin: 0;
+  padding: 0;
 }
