refactored add trip button

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -491,9 +491,6 @@ button.sml-green, button.sml-white:hover {
 }
 
 .sticky-heading {
-    background-color: white;
-    box-shadow: 0 1px 5px 0 lightgrey;
-    padding: 10px;
     position: sticky;
     top: 0;
     z-index: 2000;
@@ -578,17 +575,16 @@ hr.nav-horizontal-line {
 }
 
 div.container-header {
-  height: 50px;
-  background-color: #8EAA7B;
-  padding: 2px;
-  color: white;
+  background-color: white;
+  box-shadow: 0 1px 5px 0 lightgrey;
+  padding: 3px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 h1.container-title {
-  font-size: 25px;
+  font-size: 28px;
   margin: 0;
   padding: 0;
 }
@@ -606,4 +602,8 @@ h1.container-title {
   align-items: center;
   justify-content: center;
   padding: 30vh 0 0 0;
+}
+
+.right-align-button {
+  right: 0px;
 }
