--- a/client/src/index.css
+++ b/client/src/index.css
@@ -106,6 +106,17 @@ code {
 
 }
 
+.editUserBackground{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 8;
+}
+
 .nameLabel{
     margin-right: 0.5vw;
     padding: 0;
@@ -152,6 +163,11 @@ code {
 .container {
     margin: 0 0 0 320px;
     width: 100%;
+}
+
+.profileContainer {
+    margin: 0 0 0 320px;
+    width: 77%;
 }
 
 .homeWelcome {
@@ -253,6 +269,10 @@ code {
     border-radius: 5vh;
 }
 
+.profileName {
+    font-size: 2em;
+}
+
 .editButton{
     display: flex;
     width: 100%;
@@ -261,7 +281,9 @@ code {
 }
 
 .editProfile:hover{
-    background-color:
+    background-color: white;
+    border: 3px solid #8EAA7B;
+    color: #8EAA7B;
 }
 .sectionLabel {
     display: flex;
