--- a/client/src/index.css
+++ b/client/src/index.css
@@ -720,4 +720,12 @@ label.normal-weight {
 .centered {
   text-align: center;
   align-items: center;
+  align-self: center;
+}
+
+.plan-form-text {
+  text-align: center;
+  align-items: center;
+  align-self: center;
+  margin: 0 0 200px 0;
 }
